Especificacion Terminada. Refactorizacion codigo
